<resources>
    <string name="app_name">KaranPractical</string>
    <string name="ok">Ok</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="product_name">Product name</string>
    <string name="email">Email</string>
    <string name="phone">Mobile</string>
    <string name="cancel">Cancel</string>
</resources>